--- a/manifests/alertmanager-alertmanager.yaml
+++ b/manifests/alertmanager-alertmanager.yaml
@@ -6,7 +6,9 @@ metadata:
   name: main
   namespace: monitoring
 spec:
-  image: quay.io/prometheus/alertmanager:v0.21.0
+  image: grafanpoc.azurecr.io/monitoring/alertmanager:v0.21.0
+  imagePullSecrets:
+    - name: grafana-secret
   nodeSelector:
     kubernetes.io/os: linux
   replicas: 3
