--- a/manifests/grafana-deployment.yaml
+++ b/manifests/grafana-deployment.yaml
@@ -19,8 +19,10 @@ spec:
     spec:
       containers:
       - env: []
-        image: grafana/grafana:7.3.4
+        image: grafanpoc.azurecr.io/monitoring/grafana:7.3.4
         name: grafana
+      imagePullSecrets:
+        - name: grafana-secret
         ports:
         - containerPort: 3000
           name: http
